<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movieDetailPosterImageView"
            app:srcCompat="@mipmap/placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/generic_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/NowPlayingMoviesItemTitle"
                android:id="@+id/movieDetailTitleTextView"
                android:layout_marginTop="@dimen/generic_14dp"
                android:layout_marginBottom="@dimen/generic_14dp"
                tools:text="@string/test_movie_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movieDetailRatingTextView"
                tools:text="@string/test_movie_classification"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movieDetailDescriptionTextView"
                tools:text="@string/test_movie_description"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
